--- a/render.yaml
+++ b/render.yaml
@@ -1,35 +1,16 @@
-services:
-  # Web Service for the Node.js Server
-  - type: web
-    name: notes-app-server
-    env: node
-    rootDir: server
-    buildCommand: npm install
-    startCommand: npm start
-    envVars:
-      - key: MONGODB_URI
-        sync: false
-      - key: JWT_SECRET
-        sync: false
-      - key: GEMINI_API_KEY
-        sync: false
-      - key: PORT
-        value: 10000
-
-  # Static Site for the React Client
-  - type: web               # ← Must stay `web`
-    name: notes-app-client
-    env: static             # ← Tells Render it’s a static site
-    rootDir: client
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    envVars:
-      - key: VITE_API_URL
-        fromService:
-          type: web
-          name: notes-app-server
-          property: url
+- type: web
+  name: notes-app-client
+  env: static
+  rootDir: client
+  buildCommand: npm install && npm run build
+  staticPublishPath: dist
+  routes:
+    - type: rewrite
+      source: /*
+      destination: /index.html
+  envVars:
+    - key: VITE_API_URL
+      fromService:
+        type: web
+        name: notes-app-server
+        property: host
