--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,35 @@
-- type: web
-  name: notes-app-client
-  env: static
-  rootDir: client
-  buildCommand: npm install && npm run build
-  staticPublishPath: dist
-  routes:
-    - type: rewrite
-      source: /*
-      destination: /index.html
-  envVars:
-    - key: VITE_API_URL
-      fromService:
-        type: web
-        name: notes-app-server
-        property: host
+services:
+  # Web Service for the Node.js Server
+  - type: web
+    name: notes-app-server
+    env: node
+    rootDir: server
+    buildCommand: npm install
+    startCommand: npm start
+    envVars:
+      - key: MONGODB_URI
+        sync: false
+      - key: JWT_SECRET
+        sync: false
+      - key: GEMINI_API_KEY
+        sync: false
+      - key: PORT
+        value: 10000
+
+  # Static Site for the React Client
+  - type: web                 # static site via env: static
+    name: notes-app-client
+    env: static
+    rootDir: client
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+    envVars:
+      - key: VITE_API_URL
+        fromService:
+          type: web
+          name: notes-app-server
+          property: host
