--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: notes-app-server
     env: node
-    plan: free              # <- ADD THIS
+    plan: free
     rootDir: server
     buildCommand: npm install
     startCommand: npm start
@@ -21,7 +21,6 @@ services:
   - type: web
     name: notes-app-client
     env: static
-    plan: free              # <- AND THIS
     rootDir: client
     buildCommand: npm install && npm run build
     staticPublishPath: dist
